# UNIXem

./: .gitattributes  .gitignore  AUTHORS.txt  CHANGES.txt  CMakeLists.txt  FAQ.txt  HISTORY.txt  INSTALL.txt  KNOWN_ISSUES.txt  LICENSE  LICENSE.txt  NEWS.txt  README.md  README.txt  TODO.md  TODO.txt  build_cmake.sh  clean_cmake.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_examples.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh  unixem.vc10.sln  unixem.vc6.dsw
cmake/: BuildType.cmake  TargetMacros.cmake  unixem-config.cmake.in
include/: dirent.h  dlfcn.h  glob.h  unistd.h
include/asm/: atomic.h
include/sys/: mman.h  resource.h  time.h  uio.h
include/unixem/: dirent.h  dlfcn.h  glob.h  implicit_link.h  setenv.h  time.h  unistd.h  unixem.h
include/unixem/asm/: atomic.h
include/unixem/internal/: safestr.h  stdint.h  util.h  winsock.h
include/unixem/sys/: mman.h  resource.h  time.h  uio.h
include/unixem/util/: fs.h  str.h
projects/core/vc10/: unixem.core.vcxproj  unixem.core.vcxproj.filters
projects/core/vc6/: unixem.core.dsp
projects/vcprops/: unixem.common.props
src/: CMakeLists.txt  atomic.c  dirent.c  dlfcn.c  glob.c  hostname.c  mktemp.c  mmap.c  resource.c  setenv.c  time.c  uio.c  unistd.c  util_fs.c  util_str.c
src/internal/: util.c
test/: CMakeLists.txt
test/component/: CMakeLists.txt
test/component/test.component.dirent/: CMakeLists.txt  entry.cpp  test.component.dirent.c
test/component/test.component.glob/: CMakeLists.txt  entry.cpp  implicit_link.cpp  test.component.glob.cpp
test/component/test.component.glob/vc6/: test.component.glob.dsp
test/component/test.component.unistd.mkdtemp/: CMakeLists.txt  entry.c  test.component.unistd.mkdtemp.c
test/component/test.component.unistd.mkdtemp/vc6/: test.component.unistd.mkdtemp.dsp
test/component/test.component.unistd.mkstemp/: CMakeLists.txt  entry.c  test.component.unistd.mkstemp.c
test/component/test.component.unistd.mkstemp/vc6/: test.component.unistd.mkstemp.dsp
test/component/test.component.unistd.usleep/: CMakeLists.txt  entry.cpp
test/scratch/: CMakeLists.txt
test/scratch/test.scratch.dlfcn/: CMakeLists.txt  test.scratch.dlfcn.c
test/scratch/test.scratch.dlfcn/vc6/: test.scratch.dlfcn.dsp
test/scratch/test.scratch.fnmatch/: CMakeLists.txt  test.scratch.fnmatch.c
test/scratch/test.scratch.getrusage/: CMakeLists.txt  test.scratch.getrusage.c
test/scratch/test.scratch.link/: CMakeLists.txt  test.scratch.link.c
test/scratch/test.scratch.mmap/: CMakeLists.txt  test.scratch.mmap.c
test/scratch/test.scratch.setenv/: CMakeLists.txt  test.scratch.setenv.c
test/scratch/test.scratch.setenv/vc10/: test.scratch.setenv.vcxproj  test.scratch.setenv.vcxproj.filters
test/scratch/test.scratch.setenv/vc6/: test.scratch.setenv.dsp
test/scratch/test.scratch.syslog/: CMakeLists.txt  test.scratch.syslog.c
test/scratch/test.scratch.uio/: CMakeLists.txt  test.scratch.uio.c
test/scratch/test.scratch.uio/vc6/: test.scratch.uio.dsp
test/unit/: CMakeLists.txt
test/unit/test.unit.unistd.gethostname/: CMakeLists.txt  test.unit.unistd.gethostname.c
test/unit/test.unit.unistd.gethostname/vc6/: test.unit.unistd.gethostname.dsp
test/unit/test.unit.unistd.getpid/: CMakeLists.txt  entry.c  test.unit.unistd.getpid.c
test/unit/test.unit.unistd.getpid/vc10/: test.unit.unistd.getpid.vcxproj  test.unit.unistd.getpid.vcxproj.filters
test/unit/test.unit.unistd.pathconf/: CMakeLists.txt  entry.c  test.unit.unistd.pathconf.c
test/unit/test.unit.util.fs/: CMakeLists.txt  entry.cpp
test/unit/test.unit.util.str/: CMakeLists.txt  entry.c
