add_subdirectory(test.scratch.dlfcn)
add_subdirectory(test.scratch.fnmatch)
add_subdirectory(test.scratch.getrusage)
add_subdirectory(test.scratch.link)
add_subdirectory(test.scratch.mmap)
add_subdirectory(test.scratch.setenv)
add_subdirectory(test.scratch.syslog)
add_subdirectory(test.scratch.uio)
