# This test is deactivated temporarily
# due to missing STLSoft file 'platformstl/system/temporary_directory.hpp'.
# add_executable(test.component.glob test.component.glob.cpp)
# target_link_libraries(test.component.glob UNIXem.core STLSoft::STLSoft xTests::xTests.core)
# add_test(NAME test.component.glob COMMAND ./test.component.glob)
