# This test is temporarily deactivated du to compile error
# C:\Users\test\scratch\test.scratch.fnmatch\test.scratch.fnmatch.c(45): fatal error C1083: Cannot open include file: 'fnmatch.h': No such file or directory

# add_executable(test.scratch.fnmatch test.scratch.fnmatch.c)
# target_link_libraries(test.scratch.fnmatch UNIXem.core xTests::xTests.core)
# add_test(NAME test.scratch.fnmatch COMMAND ./test.scratch.fnmatch)
